--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -17,7 +17,7 @@
                                 <h:outputText value="Email: " />
                                 <p:inputText />
                                 <h:outputText value="Senha: " />
-                                <p:password  feedback="true" />
+                                <p:password />
                             </h:panelGrid>
                         </p:fieldset>
                     </div>
