--- a/src/main/webapp/mainPage.xhtml
+++ b/src/main/webapp/mainPage.xhtml
@@ -9,7 +9,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <h:outputStylesheet name="./css/default.css"/>
         <h:outputStylesheet name="./css/cssLayout.css"/>
-        <title>Facelets Template</title>
+        <title>Ambulasys</title>
     </h:head>
 
     <h:body>
@@ -45,7 +45,7 @@
             </p:layoutUnit>
             <p:layoutUnit position="center">
                 <div id="content" >
-                    <ui:insert name="content">Content</ui:insert>
+                    <ui:insert name="content">Conteúdo</ui:insert>
                 </div>
             </p:layoutUnit>
         </p:layout>
