--- a/src/main/webapp/gerenciamento/parametros.xhtml
+++ b/src/main/webapp/gerenciamento/parametros.xhtml
@@ -8,7 +8,7 @@
 
     <body>
 
-        <ui:composition template="./mainPage.xhtml">
+        <ui:composition template="./../mainPage.xhtml">
 
             <ui:define name="content">
                 <f:view>
@@ -25,7 +25,7 @@
                             <h:outputLabel value="Telefone:" for="telefone" />
                             <h:inputText id="telefone" value="#{parametrosController.parametros.telefone}" title="Telefone" />
                         </h:panelGrid>
-                        <p:commandButton value="Submit" ajax="false" actionListener="#{parametrosController.upload}"/>
+                        <p:commandButton value="Submit" actionListener="#{parametrosController.upload}"/>
                     </h:form>
                 </f:view>
             </ui:define>
