--- a/src/main/webapp/mainPage.xhtml
+++ b/src/main/webapp/mainPage.xhtml
@@ -16,9 +16,8 @@
     <h:body>
         <p:confirmDialog visible="#{!parametrosController.parametros.registrado}" global="true" showEffect="fade" hideEffect="fade">
             <h:form>
-                <p:commandButton value="Sim" type="button" styleClass="ui-confirmdialog-yes" icon="ui-icon-check" onclick="confirmar()"/>
+                <p:commandButton value="Sim" type="button" styleClass="ui-confirmdialog-yes" icon="ui-icon-check" ajax="false" action="#{parametrosController.confirmar()}" process="@this"/>
                 <p:commandButton value="Nao" type="button" styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
-                <p:remoteCommand action="#{parametrosController.confirmar()}" name="confirmar"/>
             </h:form>
         </p:confirmDialog>
         <p:layout fullPage="true" >
