adicionado as paginas de motorista e paciente

--- a/src/main/webapp/mainPage.xhtml
+++ b/src/main/webapp/mainPage.xhtml
@@ -31,7 +31,8 @@
                         <p:submenu label="Gerenciamento">
                             <p:menuitem value="Mat. Hospitalar" action="/gerenciamento/mathospitalar"/>
                             <p:menuitem value="Parâmetro" action="/gerenciamento/parametros" />
-                            <p:menuitem value="Mais 1" url="http://forum.primefaces.org/" />
+                            <p:menuitem value="Motorista" action="/gerenciamento/motorista" />
+                            <p:menuitem value="Paciente" action="/gerenciamento/paciente" />
                         </p:submenu>
                         <p:submenu label="Veículos">
                             <p:menuitem value="Cadastro" action="/veiculos/cadastro" />
