--- a/src/main/webapp/restrito/mainPage.xhtml
+++ b/src/main/webapp/restrito/mainPage.xhtml
@@ -3,30 +3,35 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:p="http://primefaces.org/ui"
-      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
+      xmlns:p="http://primefaces.org/ui">
 
     <h:head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <h:outputStylesheet name="./css/default.css"/>
         <h:outputStylesheet name="./css/cssLayout.css"/>
+        <script src="http://maps.google.com/maps/api/js?sensor=false"
+        type="text/javascript"></script>
         <title>Ambulasys</title>
     </h:head>
 
     <h:body>
-        <p:confirmDialog visible="#{!parametrosController.parametros.registrado}" global="true" showEffect="fade" hideEffect="fade">
-            <h:form>
-                <p:commandButton value="Sim" type="button" styleClass="ui-confirmdialog-yes" icon="ui-icon-check" ajax="false" action="#{parametrosController.confirmar()}" process="@this" immediate="true"/>
-                <p:commandButton value="Nao" type="button" styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
-            </h:form>
-        </p:confirmDialog>
+        <h:form>
+            <p:confirmDialog visible="#{!parametrosController.parametros.registrado}"
+                             global="true"
+                             header="Aviso"
+                             severity="alert"
+                             message="Deseja cadastrar os parametros?">
+                <p:commandButton value="Sim" styleClass="ui-confirmdialog-yes" icon="ui-icon-check" action="#{parametrosController.confirmar()}" />
+                <p:commandButton value="Nao" styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
+            </p:confirmDialog>
+        </h:form>
         <p:layout fullPage="true" >
             <p:layoutUnit position="north" size="85">
-                <h:outputText value="Prefeitura de Tarabái, Cidade do Jão" style="float:right;font-size: 50px;margin:10px"/>
-                <h:graphicImage library="header" name="brasao.png" width="65" style="float:right"/> 
+                <h:outputText value="#{parametrosController.parametros.nomeHospital}" style="float:right;font-size: 50px;margin:10px"/>
+                <p:graphicImage value="#{parametrosController.image}" width="65px" height="65px" style="float:right"/> 
             </p:layoutUnit>
             <p:layoutUnit position="west" size="250" header="Menu" collapsible="true">
-                <h:form>
+                <h:form id="menuForm">
                     <p:menu style="width: 95%;height: 95%">
                         <p:submenu label="Gerenciamento">
                             <p:menuitem value="Mat. Hospitalar" action="/gerenciamento/mathospitalar"/>
@@ -52,6 +57,11 @@
                         </p:submenu>
                     </p:menu>
                 </h:form>
+                <br/>
+                <p:commandButton id="btn"  icon="ui-icon-pin-s" value="Mostrar mapa" onclick="PF('dlg').show();" style="width: 98%"/>
+                <p:dialog id="gmapDialog" widgetVar="dlg" width="800" height="600" appendTo="@(body)">
+                    <p:gmap id="gmap" center="-22.133176, -51.402628" zoom="15" type="ROADMAP" style="width:100%;height:100%" />
+                </p:dialog> 
             </p:layoutUnit>
             <p:layoutUnit position="center">
                 <div id="content" >
@@ -59,6 +69,7 @@
                 </div>
             </p:layoutUnit>
         </p:layout>
+
     </h:body>
 
 </html>
