adicionado as paginas de motorista e paciente

--- a/src/main/webapp/restrito/gerenciamento/hospital.xhtml
+++ b/src/main/webapp/restrito/gerenciamento/hospital.xhtml
@@ -44,8 +44,8 @@
                                 </p:selectOneMenu>
                                 
                                 <p:outputLabel value="Estado" for="estado" />
-                                <p:selectOneMenu id="estado" value="#{hospitalController.estado}">
-                                    <p:ajax listener="#{hospitalController.naMudancaEstado()}" update="cidade" immediate="true" process="estado"/>
+                                <p:selectOneMenu id="estado" value="#{hospitalController.estado}" converter="UfConverter">
+                                    <p:ajax listener="#{hospitalController.naMudancaEstado()}" update="cidade" process="estado cidade"/>
                                     <f:selectItem itemValue="#{null}" itemLabel="Escolha" noSelectionOption="true"/>
                                     <f:selectItems value="#{hospitalController.listarEstados()}" var="estado" itemLabel="#{estado.nome}" itemValue="#{estado}"/>
                                 </p:selectOneMenu>
