--- a/src/main/webapp/restrito/gerenciamento/hospital.xhtml
+++ b/src/main/webapp/restrito/gerenciamento/hospital.xhtml
@@ -44,7 +44,8 @@
                                 </p:selectOneMenu>
                                 
                                 <p:outputLabel value="Estado" for="estado" />
-                                <p:selectOneMenu id="estado" value="#{hospitalController.estado}" converter="UfConverter">
+                                <p:selectOneMenu id="estado" value="#{hospitalController.estado}">
+                                    <f:converter converterId="UfConverter"/>
                                     <p:ajax listener="#{hospitalController.naMudancaEstado()}" update="cidade" process="estado cidade"/>
                                     <f:selectItem itemValue="#{null}" itemLabel="Escolha" noSelectionOption="true"/>
                                     <f:selectItems value="#{hospitalController.listarEstados()}" var="estado" itemLabel="#{estado.nome}" itemValue="#{estado}"/>
@@ -52,7 +53,7 @@
                                 
                                 <p:outputLabel value="Cidade:" for="cidade"/>
                                 <p:selectOneMenu id="cidade" value="#{hospitalController.hospital.cidadeId}">
-                                    <f:selectItem itemValue="#{null}" itemLabel="Escolha" noSelectionOption="true"/>
+                                    <f:selectItem itemValue="" itemLabel="Escolha" noSelectionOption="true"/>
                                     <f:selectItems value="#{hospitalController.listaCidades}" var="cidade" itemLabel="#{cidade.nome}" itemValue="#{cidade}"/>
                                 </p:selectOneMenu>
                                 <p:commandButton value="Salvar" actionListener="#{hospitalController.salvar()}" icon="ui-icon-check" update="entrada"/>
@@ -122,6 +123,7 @@
                                         <h:outputText value="Responsável"/>
                                     </f:facet>
                                     <h:outputText value="#{empty item.responsavel.name ? '-' : item.responsavel.name}" />
+<!--                                    <h:commandLink action="#{hospitalController.executa(item.id)}"-->
                                 </p:column>
                             </p:dataTable>
                         </p:panel>
