--- a/src/main/webapp/restrito/mainPage.xhtml
+++ b/src/main/webapp/restrito/mainPage.xhtml
@@ -11,6 +11,7 @@
         <h:outputStylesheet name="./css/cssLayout.css"/>
         <script src="http://maps.google.com/maps/api/js?sensor=false"
         type="text/javascript"></script>
+        <link rel="shortcut icon" type="image/x-icon" href="#{request.contextPath}/resources/Health-Icon.ico"/>
         <title>Ambulasys</title>
     </h:head>
 
