--- a/src/main/webapp/restrito/veiculos/cadastro.xhtml
+++ b/src/main/webapp/restrito/veiculos/cadastro.xhtml
@@ -1,14 +1,56 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:p="http://primefaces.org/ui">
 
     <body>
 
         <ui:composition template="./../mainPage.xhtml">
 
             <ui:define name="content">
-                cadastro veiculos
+                <f:view>
+                    <h:form>
+                        <h1><h:outputText value="Criar/Alterar"/></h1>
+                        <p:panelGrid columns="2" id="formulario">
+                            <p:outputLabel value="Placa:" for="placa" />
+                            <p:inputMask id="placa"  mask="aaa-9999" value="#{veiculoController.veiculo.placa}" title="Placa" required="true" requiredMessage="The Placa field is required."/>
+                            <p:outputLabel value="Modelo:" for="modelo" />
+                            <p:inputText id="modelo" value="#{veiculoController.veiculo.modelo}" title="Modelo" required="true" requiredMessage="The Modelo field is required."/>
+                            <p:outputLabel value="Chassi:" for="chassi" />
+                            <p:inputText id="chassi" maxlength="17" value="#{veiculoController.veiculo.chassi}" title="Chassi" required="true" requiredMessage="The Chassi field is required."/>
+                            <p:outputLabel value="Ano:" for="ano" />
+                            <p:inputText id="ano" value="#{veiculoController.veiculo.ano}" title="Ano" required="true" requiredMessage="The Ano field is required.">
+                                <f:convertDateTime pattern="yyyy-MM-dd" />
+                            </p:inputText>
+                            <p:outputLabel value="Data de Aquisicao:" for="dataAquisicao" />
+                            <p:inputText id="dataAquisicao" value="#{veiculoController.veiculo.dataAquisicao}" title="DataAquisicao" required="true" requiredMessage="The DataAquisicao field is required.">
+                                <f:convertDateTime pattern="yyyy-MM-dd" />
+                            </p:inputText>
+                            <p:outputLabel value="Lotação Maxima:" for="lotacaoMax" />
+                            <p:inputText id="lotacaoMax" value="#{veiculoController.veiculo.lotacaoMax}" title="LotacaoMax" required="true" requiredMessage="The LotacaoMax field is required."/>
+                            <p:outputLabel value="Renavam:" for="renavam" />
+                            <p:inputText id="renavam"  maxlength="11" value="#{veiculoController.veiculo.renavam}" title="Renavam" required="true" requiredMessage="The Renavam field is required."/>
+                            <p:outputLabel value="Cor:" for="cor" />
+                            <p:inputText id="cor" value="#{veiculoController.veiculo.cor}" title="Cor" required="true" requiredMessage="The Cor field is required."/>
+                            <p:outputLabel value="Combustivel:" for="combustivel" />
+                            <p:inputText id="combustivel" value="#{veiculoController.veiculo.combustivel}" title="Combustivel" required="true" requiredMessage="The Combustivel field is required."/>
+                            <p:outputLabel value="Kilometragem:" for="kilometragem" />
+                            <p:inputText id="kilometragem" value="#{veiculoController.veiculo.kilometragem}" title="Kilometragem" required="true" requiredMessage="The Kilometragem field is required."/>
+                            <p:outputLabel value="Hospital:" for="hospitalId" />
+                            <p:selectOneMenu id="hospitalId" value="#{veiculoController.veiculo.hospitalId}" required="true" requiredMessage="The HospitalId field is required.">
+                                <f:selectItem itemLabel="Selecione um" itemValue="" />
+                                <f:selectItems value="#{hospitalController.listarHospitais()}" var="hosp" itemLabel="#{hosp.nomeFantasia}" itemValue="#{hosp}"/>
+                            
+                            </p:selectOneMenu>
+                            <p:commandButton value="Salvar" actionListener="#{veiculoController.salvar()}" icon="ui-icon-check" update="formulario"/>
+                            <p:commandButton value="Limpar" ajax="true" immediate="true" type="reset"/> 
+                        </p:panelGrid>
+                    </h:form>
+                </f:view>
+
             </ui:define>
 
         </ui:composition>
